UD-544 fix checkbox size to prevent flicker

--- a/src/components/widget/list/cdvy-list-item-checked.styl
+++ b/src/components/widget/list/cdvy-list-item-checked.styl
@@ -1,5 +1,6 @@
 .cdvy-list-item-checkbox
   margin 0
+  height 36px
 
 .cdvy-list-item-checkbox div
   margin 0
